--- a/projects/landing-page/index.html
+++ b/projects/landing-page/index.html
@@ -49,11 +49,19 @@
 
         <p>Aliquam a convallis justo. Vivamus venenatis, erat eget pulvinar gravida, ipsum lacus aliquet velit, vel luctus diam ipsum a diam. Cras eu tincidunt arcu, vitae rhoncus purus. Vestibulum fermentum consectetur porttitor. Suspendisse imperdiet porttitor tortor, eget elementum tortor mollis non.</p>
       </div>
+      </section>
+    <section id="section4" data-nav=" section 4">
+    <div class="landind__container">
+      <h2>Section 4</h2>
+      <p>Hi,this is my first project with udacity,</p>
+      <p>I hope that will work properly.</p>
+    </div>
     </section>
+    <button id="topBtn">Top</button>
   </main>
   <footer class="page__footer">
     <p>&copy Udacity</p>
   </footer>
-<script src="app.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
