--- a/projects/landing-page/index.html
+++ b/projects/landing-page/index.html
@@ -53,11 +53,10 @@
     <section id="section4" data-nav=" section 4">
     <div class="landind__container">
       <h2>Section 4</h2>
-      <p>Hi,this is my first project with udacity,</p>
-      <p>I hope that will work properly.</p>
+      <p>Lorem ipsum dolor sit amet</p>
+      <p>Aliquam a Corvallis just.</p>
     </div>
     </section>
-    <button id="topBtn">Top</button>
   </main>
   <footer class="page__footer">
     <p>&copy Udacity</p>
